--- a/index.html
+++ b/index.html
@@ -14,23 +14,26 @@
 
   <div>
 
-    <div>
-      <img class="img-flex" src="images/ankylosaurus.svg" alt="">
-      <p>Ankylosaurus</p>
-    </div>
-    <div>
-      <img class="img-flex" src="images/hadrosaur.svg" alt="">
-      <p>Hadrosaur</p>
-    </div>
-    <div>
-      <img class="img-flex" src="images/stegosaurus.svg" alt="">
-      <p>Stegosaurus</p>
-    </div>
-    <div>
-      <img class="img-flex" src="images/triceratops.svg" alt="">
-      <p>Triceratops</p>
-    </div>
+    <ol class="list-group">
+      <li>
+        <i class="icon i-64"><img src="images/ankylosaurus.svg" alt=""></i>
+        <span class="icon-label">Ankylosaurus</span>
+      </li>
+      <li>
+        <i class="icon i-64"><img src="images/hadrosaur.svg" alt=""></i>
+        <span class="icon-label">Hadrosaur</span>
+      </li>
+      <li>
+        <i class="icon i-64"><img src="images/stegosaurus.svg" alt=""></i>
+        <span class="icon-label">Stegosaurus</span>
+      </li>
+      <li>
+        <i class="icon i-64"><img src="images/triceratops.svg" alt=""></i>
+        <span class="icon-label">Triceratops</span>
+      </li>
+    </ol>
 
+  </div>
 
 </body>
 </html>
